# PolyQ

./: .buildinfo  .gitignore  Cargo.toml  Experiment.ipynb  LICENSE  PolyQ.html  README.md  benchmark.ipynb  bv_times.csv  contributing.html  demo.ipynb  genindex.html  graphs.ipynb  index.html  modules.html  objects.inv  presentation.md  py-modindex.html  pyproject.toml  references.bib  requirements.txt  search.html  searchindex.js
Benchmark/: benchmark.ipynb
Benchmark/qasm2_exports/: clifford_11q_7.qasm2  clifford_21q_10.qasm2  clifford_2q_1.qasm2  clifford_3q_4.qasm2  clifford_t_11q_8.qasm2  clifford_t_21q_11.qasm2  clifford_t_2q_2.qasm2  clifford_t_3q_5.qasm2  qft_clifford_t_2q_1.qasm2  qft_clifford_t_2q_2.qasm2  qft_clifford_t_3q_4.qasm2  (+4 more)
JSS_LOGS/: TODO.md
PolyQ/: __init__.py  bench.py  branching.py  engine.py  enzine.py  lib.py  ring_math.py  sim.py  simulation.py  test_engine.py  test_lib.py  test_optimised.py  test_sim.py  test_vatakai.py  transpy.py
Resources/: Poly_struct.md  notes_symplectic.py  notes_tensor_network.py  notes_weight_cycle.py  pipeline.md  todo.txt
Results/: benchmark_data_range.md
Rust_Benchmark/: Benchmakr.rs  Readme.md
_sources/: PolyQ.rst.txt  contributing.rst.txt
docs/: PolyQ.rst  modules.rst
pylib/: Cargo.toml
src/: Distribute.rs  Optimise_Polynomial.rs  Transpile_circuit.rs  Transpile_polynomial.rs  circuit.rs  dataset.rs  engine.rs  gateset.rs  lib.rs  master.rs  notes.md  obj.rs  poly_opt.rs  polynomial.rs  quantum_circuit.rs  ring_math.rs  sim.rs  simulation.rs  status.txt
tests/: test.rs  test_lib.py
(+24 files in other folders)
