[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "PolyQ"
module-name = "polyq_backend"

[project]
name = "PolyQ"
version = "0.1.0"
description = "A novel approach to simulate Quantum Circuits using Boolean Polynomials."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  { name="C. A. Jothishwaran", email="jc_a@ece.iitr.ac.in"}, 
  { name="Aarav Ratra", email="a_ratra@ph.iitr.ac.in"},
  { name="Satyam Sonaniya", email="satyam_s@ece.iitr.ac.in"},
]
dependencies = [
    "numpy>=2", 
    "qiskit>=2.0.0", 
]

[project.urls]
"Homepage" = "https://github.com/QSDAL-IITR/PolyQ"
